--- a/SE_Project/SE_Poject.html
+++ b/SE_Project/SE_Poject.html
@@ -33,6 +33,23 @@
         </div>
     </div>
 
+    <div id="branch_subjects">
+        <h1 class="transition" id="branch_subjects_ex">Branch Subject</h1>
+        <div>
+            <div>
+                <p id="branch_subject_text"> <br>1. MOBILE DEVICE PROGRAMMING<br>
+                   2. REQUIREMENT ENGINEERING<br>
+                   3. SERVICE-ORIENTED PROGRAMMING<br>
+                   4. SOFTWARE VERIFICATION AND VALIDATION<br>
+                   5. CLOUD-BASED ENTERPRISE APPLICATION DEVELOPMENT<br>
+                   6. SOFTWARE DEVELOPMENT TOOLS AND ENVIRONMENTS<br>
+                   7. PROJECT IN SOFTWARE ENGINEERING 1<br>
+                   8. PROJECT IN SOFTWARE ENGINEERING 2<br>
+                </p>
+            </div>
+        </div>
+    </div>
+
     <section id="jscript">
     <script>
             var myVar;
