--- a/SE_Project/SE_Poject.html
+++ b/SE_Project/SE_Poject.html
@@ -16,12 +16,12 @@
     <div class="fade" id="bg1">
         <h1 align='center' class="fade" id="head1">Software<br>Engineer</h1>
     </div>
-
+    <!--//////////////////////////////////////////////////////////////////////////////-->
     <div id="Sidenav" class="fade">
         <a href="http://www.it.kmitl.ac.th/" target="_blank" id="it_kmitl">kmitl<img src="it_kmitl.png" width="50px" height="50px" align='right'></a>
         <a href="#" id="content_table"> <img src="dashboard.svg" align='right' width="50px" height="50px"></a>
     </div>
-
+    <!--//////////////////////////////////////////////////////////////////////////////-->
     <div id="about_course">
         <h1 class="transition" id="course_description">What is Software Engineering?</h1>
         <div>
@@ -32,24 +32,104 @@
             </div>
         </div>
     </div>
-
+    <!--//////////////////////////////////////////////////////////////////////////////-->
     <div id="branch_subjects">
         <h1 class="transition" id="branch_subjects_ex">Branch Subject</h1>
         <div>
             <div>
-                <p id="branch_subject_text"> <br>1. MOBILE DEVICE PROGRAMMING<br>
-                   2. REQUIREMENT ENGINEERING<br>
-                   3. SERVICE-ORIENTED PROGRAMMING<br>
-                   4. SOFTWARE VERIFICATION AND VALIDATION<br>
-                   5. CLOUD-BASED ENTERPRISE APPLICATION DEVELOPMENT<br>
-                   6. SOFTWARE DEVELOPMENT TOOLS AND ENVIRONMENTS<br>
-                   7. PROJECT IN SOFTWARE ENGINEERING 1<br>
-                   8. PROJECT IN SOFTWARE ENGINEERING 2<br>
+                <p id="branch_subject_text">3. MOBILE DEVICE PROGRAMMING<br>
+                   4. REQUIREMENT ENGINEERING<br>
+                   5. SERVICE-ORIENTED PROGRAMMING<br>
+                   6. SOFTWARE VERIFICATION AND VALIDATION<br>
+                   7. CLOUD-BASED ENTERPRISE APPLICATION DEVELOPMENT<br>
+                   8. SOFTWARE DEVELOPMENT TOOLS AND ENVIRONMENTS<br>
+                   9. PROJECT IN SOFTWARE ENGINEERING 1<br>
+                   10. PROJECT IN SOFTWARE ENGINEERING 2<br>
                 </p>
             </div>
         </div>
     </div>
+    <!--//////////////////////////////////////////////////////////////////////////////-->
+    <p>
+        MOBILE DEVICE PROGRAMMING
+        Subject code: 06016323
+        Prerequisite: 06016317 OBJECT-ORIENTED PROGRAMMING
+        Credit: 3(2-2-5)
+        Introduction to technology and the programming of application for mobile computing including devices i.e. smart phones, pads, and tablets; developing mobile applications and using device emulators for coding and testing.
 
+    </p>
+
+    <p>
+        REQUIREMENT ENGINEERING
+        Subject code: 06016324
+        Prerequisite: NONE
+        Credit: 3(3-0-6)
+        Requirements management technique; problem analysis; stakeholder needs;
+        document requirements with use-case model; document hierarchy and standard for define requirements level; system definition;
+        scope managing; requirement attributes and traceability; manage change; using requirements to drive ongoing design, test, and user documentation.
+
+    </p>
+
+    <p>
+        SERVICE-ORIENTED PROGRAMMING
+        Subject code: 06016325
+        Prerequisite: NONE
+        Credit: 3(2-2-5)
+        Concepts and structures of web services; web services standards; development and deployment of web service applications; concept of Service-Oriented Architecture (SOA); features and benefits of enterprise service bus (ESB); business process management (BPM)
+
+    </p>
+
+    <p>
+        SOFTWARE VERIFICATION AND VALIDATION
+        Subject code: 06016326
+        Prerequisite: 06016306 INFORMATION SYSTEMS ANALYSISAND DESIGN
+        Credit: 3(3-0-6)
+        Role of V&V in software evolution; software technical reviews; levels of software testing; testing techniques; proof of correctness; simulation and prototyping; requirements tracing; software V&V planning; tracking
+        test activities; problem tracking and assessment.
+
+    </p>
+
+    <p>
+        Cloud-based enterprise application development
+        Subject code: 06016327
+        Prerequisite: 06016325 SERVICES-ORIENTED PROGRAMMING
+        Credit: 3(2-2-5)
+        Introduction to cloud technology, cloud architecture, virtualization and
+        multi-tenancy features, principles to develop enterprise application in cloud,
+        declarative and problematic application development, governances limits, frequently encountered issues during cloud-based, application development, requirements or capability factors towards the selection of appropriate development paradigm, data analytics using cloud platforms, principle to
+        cloud database management, NoSQL.
+
+    </p>
+
+    <p>
+        SOFTWARE DEVELOPMENT TOOLS AND ENVIRONMENTS
+        Subject code: 06016328
+        Prerequisite: NONE
+        Credit: 3(2-2-5)
+        Principles to software professionals, role of applications in software engineering tasks, agile software development tools, product
+        development tracking, version and configuration management, build and
+        continuous integration tools, program debugging and profiling tools, collaborative development environment, packaging and development tools.
+
+    </p>
+
+    <p>
+        PROJECT IN SOFTWARE ENGINEERING 1
+        Subject code: 06016329
+        Prerequisite: NONE
+        Credit: 3(0-9-0)
+        Study or research of interesting current topics in software engineering undertaking a work project based by applying the theoretical aspects of the information technology studies under the supervision of a faculty member to be able to present a project proposal and elementary result from practical solving or academic analysis.
+
+    </p>
+
+    <p>
+        PROJECT IN SOFTWARE ENGINEERING 2
+        Subject code: 06016330
+        Prerequisite: 06016329 PROJECT IN SOFTWARE ENGINEERING 1
+        Credit: 3(0-9-0)
+        Study or research of interesting current topics in software engineering undertaking a work project based by applying the theoretical aspects of the information technology studies under the supervision of a faculty member to be able to present a complete result of the proposed topic and study as continued from project I.
+
+    </p>
+<!--////////////////////////// JS /////////////////////////////-->
     <section id="jscript">
     <script>
             var myVar;
