--- a/SE_Project/SE_Poject.html
+++ b/SE_Project/SE_Poject.html
@@ -18,8 +18,8 @@
     </div>
 
     <div id="Sidenav" class="fade">
-        <a href="http://www.it.kmitl.ac.th/" target="_blank" id="it_kmitl">kmitl<img src="it_kmitl.png" width="50px" height="50px" align='right'></a>
-        <a href="#" id="content_table"> <img src="dashboard.svg" align='right' width="50px" height="50px"></a>
+        <a href="http://www.it.kmitl.ac.th/" target="_blank" id="it_kmitl"><span>Faculty of Information Technology</span><span><img src="it_kmitl.png" width="50px" height="50px" align='right'></span></a>
+        <a href="#" id="content_table">TABLE OF CONTENT<img src="dashboard.svg" align='right' width="50px" height="50px"></a>
     </div>
 
     <div id="about_course">
@@ -31,6 +31,12 @@
                 </p>
             </div>
         </div>
+    </div>
+
+    <div id="subjects">
+        <h1 class="transition">Specific Subjects</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio iure, ullam provident nam at qui, enim deserunt atque deleniti pariatur facilis asperiores excepturi exercitationem voluptatem amet nesciunt necessitatibus! Animi, magni. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis quaerat quibusdam dignissimos inventore, aperiam iure, non quis culpa placeat perspiciatis nesciunt nobis itaque velit omnis doloremque vel voluptatem, deleniti ab!
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam rem placeat architecto veritatis praesentium explicabo fuga est deleniti ad quas officiis quos, nobis ut vel ullam necessitatibus unde ab aliquid.</p>
     </div>
 
     <section id="jscript">
