--- a/SE_Project/SE_Poject.html
+++ b/SE_Project/SE_Poject.html
@@ -14,7 +14,7 @@
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
     <div class="fade" id="bg1">
-        <h1 align='center' class="fade" id="head1">Software<br>Engineer</h1>
+        <h1 class="fade" id="head1">Software<br>Engineer</h1>
     </div>
 
     <div id="Sidenav" class="fade">
@@ -37,6 +37,10 @@
         <h1 class="transition">Specific Subjects</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio iure, ullam provident nam at qui, enim deserunt atque deleniti pariatur facilis asperiores excepturi exercitationem voluptatem amet nesciunt necessitatibus! Animi, magni. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis quaerat quibusdam dignissimos inventore, aperiam iure, non quis culpa placeat perspiciatis nesciunt nobis itaque velit omnis doloremque vel voluptatem, deleniti ab!
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam rem placeat architecto veritatis praesentium explicabo fuga est deleniti ad quas officiis quos, nobis ut vel ullam necessitatibus unde ab aliquid.</p>
+    </div>
+
+    <div id="career">
+        <h1>Career</h1>
     </div>
 
     <section id="jscript">
