--- a/SE_Project/SE_Poject.html
+++ b/SE_Project/SE_Poject.html
@@ -18,7 +18,7 @@
     </div>
     <!--//////////////////////////////////////////////////////////////////////////////-->
     <div id="Sidenav" class="fade">
-        <a href="http://www.it.kmitl.ac.th/" target="_blank" id="it_kmitl">kmitl<img src="it_kmitl.png" width="50px" height="50px" align='right'></a>
+        <a href="http://www.it.kmitl.ac.th/" target="_blank" id="it_kmitl">IT @KMITL<img src="it_kmitl.png" width="50px" height="50px" align='right'></a>
         <a href="#" id="content_table"> <img src="dashboard.svg" align='right' width="50px" height="50px"></a>
     </div>
     <!--//////////////////////////////////////////////////////////////////////////////-->
