--- a/SE_Project/SE_Poject.html
+++ b/SE_Project/SE_Poject.html
@@ -53,13 +53,13 @@
         <div>
             <div>
                 <p id="branch_subject_text">3. MOBILE DEVICE PROGRAMMING<br>
-                   4. REQUIREMENT ENGINEERING<br>
-                   5. SERVICE-ORIENTED PROGRAMMING<br>
-                   6. SOFTWARE VERIFICATION AND VALIDATION<br>
-                   7. CLOUD-BASED ENTERPRISE APPLICATION DEVELOPMENT<br>
-                   8. SOFTWARE DEVELOPMENT TOOLS AND ENVIRONMENTS<br>
-                   9. PROJECT IN SOFTWARE ENGINEERING 1<br>
-                   10. PROJECT IN SOFTWARE ENGINEERING 2<br>
+                    4. REQUIREMENT ENGINEERING<br>
+                    5. SERVICE-ORIENTED PROGRAMMING<br>
+                    6. SOFTWARE VERIFICATION AND VALIDATION<br>
+                    7. CLOUD-BASED ENTERPRISE APPLICATION DEVELOPMENT<br>
+                    8. SOFTWARE DEVELOPMENT TOOLS AND ENVIRONMENTS<br>
+                    9. PROJECT IN SOFTWARE ENGINEERING 1<br>
+                    10. PROJECT IN SOFTWARE ENGINEERING 2<br>
                 </p>
                 <p>
                     <b><br>MOBILE DEVICE PROGRAMMING</b><br>
@@ -69,6 +69,143 @@
                     Introduction to technology and the programming of application for mobile computing including devices
                     i.e. smart phones, pads, and tablets; developing mobile applications and using device emulators for coding and testing.
                 </p>
+
+                <p>
+                    <b><br>REQUIREMENT ENGINEERING</b><br>
+                    Subject code: 06016324<br>
+                    Prerequisite: NONE<br>
+                    Credit: 3(3-0-6)<br>
+                    Requirements management technique; problem analysis; stakeholder needs;
+                    document requirements with use-case model; document hierarchy and standard for define requirements level;
+                    system definition; scope managing; requirement attributes and traceability;
+                    manage change; using requirements to drive ongoing design, test, and user documentation.
+                </p>
+
+                <p>
+                    <b><br>SERVICE-ORIENTED PROGRAMMING</b><br>
+                    Subject code: 06016325<br>
+                    Prerequisite: NONE<br>
+                    Credit: 3(2-2-5)<br>
+                    Concepts and structures of web services; web services standards;
+                    development and deployment of web service applications; concept of Service-Oriented Architecture (SOA);
+                    features and benefits of enterprise service bus (ESB); business process management (BPM)
+                </p>
+
+                <p>
+                    <b><br>SOFTWARE VERIFICATION AND VALIDATION</b><br>
+                    Subject code: 06016326<br>
+                    Prerequisite: 06016306 INFORMATION SYSTEMS ANALYSISAND DESIGN<br>
+                    Credit: 3(3-0-6)<br>
+                    Role of V&V in software evolution; software technical reviews; levels of software testing; testing techniques;
+                    proof of correctness; simulation and prototyping; requirements tracing; software V&V planning; tracking
+                    test activities; problem tracking and assessment.
+                </p>
+
+                <p>
+                    <b><br>CLOUD-BASED ENTERPRISE APPLICATION DEVELOPMENT</b><br>
+                    Subject code: 06016327<br>
+                    Prerequisite: 06016325 SERVICES-ORIENTED PROGRAMMING<br>
+                    Credit: 3(2-2-5)<br>
+                    Introduction to cloud technology, cloud architecture, virtualization and
+                    multi-tenancy features, principles to develop enterprise application in cloud,
+                    declarative and problematic application development, governances limits,
+                    frequently encountered issues during cloud-based, application development,
+                    requirements or capability factors towards the selection of appropriate development paradigm,
+                    data analytics using cloud platforms, principle to cloud database management, NoSQL.
+                </p>
+
+                <p>
+                    <b><br>SOFTWARE DEVELOPMENT TOOLS AND ENVIRONMENTS</b><br>
+                    Subject code: 06016328<br>
+                    Prerequisite: NONE<br>
+                    Credit: 3(2-2-5)<br>
+                    Principles to software professionals, role of applications in software engineering tasks,
+                    agile software development tools, product
+                    development tracking, version and configuration management, build and continuous integration tools,
+                    program debugging and profiling tools, collaborative development environment, packaging and development tools.
+                </p>
+
+                <p>
+                    <b><br>PROJECT IN SOFTWARE ENGINEERING 1</b><br>
+                    Subject code: 06016329<br>
+                    Prerequisite: NONE<br>
+                    Credit: 3(0-9-0)<br>
+                    Study or research of interesting current topics in software engineering undertaking a work project based
+                    by applying the theoretical aspects of the information technology studies under the supervision of
+                    a faculty member to be able to present a project proposal and elementary result from practical solving or academic analysis.
+                </p>
+
+                <p>
+                    <b><br>PROJECT IN SOFTWARE ENGINEERING 2</b><br>
+                    Subject code: 06016330<br>
+                    Prerequisite: 06016329 PROJECT IN SOFTWARE ENGINEERING 1<br>
+                    Credit: 3(0-9-0)<br>
+                    Study or research of interesting current topics in software engineering undertaking a work project based
+                    by applying the theoretical aspects of the information technology studies under the supervision of
+                    a faculty member to be able to present a complete result of the proposed topic and study as continued from project I.
+                </p>
+            </div>
+        </div>
+    </div>
+    <!--//////////////////////////////////////////////////////////////////////////////-->
+    <table id="branch_subjects_table" width="90%">
+        <tr>
+            <th>YEAR 2/2</th>
+            <th>YEAR 3/1</th>
+            <th>YEAR 3/2</th>
+            <th>YEAR 4/1</th>
+            <th>YEAR 4/2</th>
+        </tr>
+        <tr align="center">
+            <td>
+                6016321<br>
+                Software Engineering
+            </td>
+            <td>
+                6016323
+                Mobile Device Programming
+            </td>
+            <td>
+                6016326<br>
+                Software Verification and Validation
+            </td>
+            <td>
+                6016329<br>
+                Project in Software Engineering 1
+            </td>
+            <td>
+                6016330<br>
+                Project in Software Engineering 2
+            </td>
+        </tr>
+        <tr align="center">
+            <td>
+                60163212<br>
+                Web Programming
+            </td>
+            <td>
+                6016324<br>
+                Requirement Engineering
+            </td>
+            <td>
+                6016327<br>
+                Cloud-based Enterprise Application Development
+            </td>
+        </tr>
+        <tr align="center">
+            <td>
+
+            </td>
+            <td>
+                6016325<br>
+                Service-Oriented Programming
+            </td>
+            <td>
+                6016328<br>
+                Software Development Tools and Environments
+            </td>
+        </tr>
+    </table>
 
     <div id="subjects">
         <h1 class="transition">Specific Subjects</h1>
