add comment tag and eligible

--- a/SE_Project/SE_Poject.html
+++ b/SE_Project/SE_Poject.html
@@ -6,37 +6,38 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Software Engineer</title>
     <link rel="stylesheet" href="SE_Project.css">
+    <link href="https://fonts.googleapis.com/css?family=Concert+One|Patrick+Hand|Patua+One|Philosopher|Playfair+Display+SC|Sanchez" rel="stylesheet">
 </head>
 <body onload="myFunction()" style="margin:0;">
 
+    <!--Circle Loader when loading page-->
     <div id="loader"></div>
 
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+    <!--Go to top button-->
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Go to top</button>
 
+    <!--Background and top header-->
     <div class="fade" id="bg1">
         <h1 class="fade" id="head1">Software<br>Engineer</h1>
     </div>
-    <!--//////////////////////////////////////////////////////////////////////////////-->
+
+    <!--Side Navigation-->
     <div id="Sidenav" class="fade">
         <a href="http://www.it.kmitl.ac.th/" target="_blank" id="it_kmitl">IT @KMITL<img src="it_kmitl.png" width="50px" height="50px" align='right'></a>
         <a href="#" id="content_table"> <img src="dashboard.svg" align='right' width="50px" height="50px"></a>
     </div>
-    <!--//////////////////////////////////////////////////////////////////////////////-->
+
+    <!--About Course-->
     <div id="about_course">
         <h1 class="transition" id="course_description">What is Software Engineering?</h1>
-        <div>
-            <div>
-                <p id="text_descript">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio iure, ullam provident nam at qui, enim deserunt atque deleniti pariatur facilis asperiores excepturi exercitationem voluptatem amet nesciunt necessitatibus! Animi, magni. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis quaerat quibusdam dignissimos inventore, aperiam iure, non quis culpa placeat perspiciatis nesciunt nobis itaque velit omnis doloremque vel voluptatem, deleniti ab!
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam rem placeat architecto veritatis praesentium explicabo fuga est deleniti ad quas officiis quos, nobis ut vel ullam necessitatibus unde ab aliquid.
-                </p>
-            </div>
-        </div>
+        <p id="text_descript">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio iure, ullam provident nam at qui, enim deserunt atque deleniti pariatur facilis asperiores excepturi exercitationem voluptatem amet nesciunt necessitatibus! Animi, magni. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis quaerat quibusdam dignissimos inventore, aperiam iure, non quis culpa placeat perspiciatis nesciunt nobis itaque velit omnis doloremque vel voluptatem, deleniti ab!
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam rem placeat architecto veritatis praesentium explicabo fuga est deleniti ad quas officiis quos, nobis ut vel ullam necessitatibus unde ab aliquid.
+        </p>
     </div>
-    <!--//////////////////////////////////////////////////////////////////////////////-->
+
+    <!--Carrer after graduate-->
     <div id="career_ex">
         <h1 class="transition" id="career_ex_head">Example of career after graduated</h1>
-        <div>
-            <div>
                 <p id="career_ex_head_text">
                     - Programmer<br>
                     - Web Developer<br>
@@ -44,22 +45,22 @@
                     - System Analyst<br>
                     - Software Architect<br>
                     - Project manager Assistant.<br> </p>
-            </div>
-        </div>
     </div>
-    <!--//////////////////////////////////////////////////////////////////////////////-->
+
+    <!--Specific subjects in SE branch-->
     <div id="branch_subjects">
         <h1 class="transition" id="branch_subjects_ex">Branch Subject</h1>
-        <div>
-            <div>
-                <p id="branch_subject_text">3. MOBILE DEVICE PROGRAMMING<br>
-                   4. REQUIREMENT ENGINEERING<br>
-                   5. SERVICE-ORIENTED PROGRAMMING<br>
-                   6. SOFTWARE VERIFICATION AND VALIDATION<br>
-                   7. CLOUD-BASED ENTERPRISE APPLICATION DEVELOPMENT<br>
-                   8. SOFTWARE DEVELOPMENT TOOLS AND ENVIRONMENTS<br>
-                   9. PROJECT IN SOFTWARE ENGINEERING 1<br>
-                   10. PROJECT IN SOFTWARE ENGINEERING 2<br>
+                <p id="branch_subject_text">
+                    1. SOFTWARE ENGINEERING<br>
+                    2. WEB PROGRAMMING<br>
+                    3. MOBILE DEVICE PROGRAMMING<br>
+                    4. REQUIREMENT ENGINEERING<br>
+                    5. SERVICE-ORIENTED PROGRAMMING<br>
+                    6. SOFTWARE VERIFICATION AND VALIDATION<br>
+                    7. CLOUD-BASED ENTERPRISE APPLICATION DEVELOPMENT<br>
+                    8. SOFTWARE DEVELOPMENT TOOLS AND ENVIRONMENTS<br>
+                    9. PROJECT IN SOFTWARE ENGINEERING 1<br>
+                    10. PROJECT IN SOFTWARE ENGINEERING 2<br>
                 </p>
                 <p>
                     <b><br>MOBILE DEVICE PROGRAMMING</b><br>
@@ -69,17 +70,29 @@
                     Introduction to technology and the programming of application for mobile computing including devices
                     i.e. smart phones, pads, and tablets; developing mobile applications and using device emulators for coding and testing.
                 </p>
-
-    <div id="subjects">
-        <h1 class="transition">Specific Subjects</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio iure, ullam provident nam at qui, enim deserunt atque deleniti pariatur facilis asperiores excepturi exercitationem voluptatem amet nesciunt necessitatibus! Animi, magni. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis quaerat quibusdam dignissimos inventore, aperiam iure, non quis culpa placeat perspiciatis nesciunt nobis itaque velit omnis doloremque vel voluptatem, deleniti ab!
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam rem placeat architecto veritatis praesentium explicabo fuga est deleniti ad quas officiis quos, nobis ut vel ullam necessitatibus unde ab aliquid.</p>
     </div>
 
-    <div id="career">
-        <h1>Career</h1>
+    <!--Who is eligible for this branch?-->
+    <div id="branch_eligible">
+        <h1>Who is eligible for this branch?</h1>
+        <p>
+            1. Have programming knowledge.
+            2. Have good logic.
+            3. Have good mathematic knowledge.
+        </p>
     </div>
 
+    <!--Programming language-->
+    <div id="pro_lang">
+        
+    </div>
+
+    <!--End of the line-->
+    <div id="end_line">
+        <h1>Finish!</h1>
+    </div>
+
+    <!--JavaScript-->
     <section id="jscript">
     <script>
             var myVar;
