--- a/SE_Project/SE_Poject.html
+++ b/SE_Project/SE_Poject.html
@@ -174,7 +174,7 @@
     </div>
 
     <!--//////////////////////////////////////////////////////////////////////////////-->
-    <table id="branch_subjects_table" width="90%" align="center">
+    <table class="transition" id="branch_subjects_table" width="90%" align="center">
         <tr>
             <th>YEAR 2/2</th>
             <th>YEAR 3/1</th>
@@ -234,7 +234,7 @@
     </table>
 
     <!--Who is eligible for this branch?-->
-    <div id="branch_eligible">
+    <div class="transition" id="branch_eligible">
         <h1>Who is eligible for this branch?</h1>
         <p>
             1. Have programming knowledge.<br>
@@ -244,7 +244,7 @@
     </div>
 
     <!--What you need to do/to have if you are interested in this branch-->
-    <div id="branch_interested">
+    <div class="transition" id="branch_interested">
         <h1>What I need to do/to have if I am interested in this branch and do not have strong experience?</h1>
         <p>
             It would be easier to enter this branch if you have some experience in programming.
@@ -254,7 +254,19 @@
             This would help you make decision and be more confident in yourselves.
         </p>
         <p>
-            Here at IT faculty. We have 3 programming 
+            Here at IT faculty, we have 3 programming subjects which are Problem Solving in Information Technology, 
+            Computer Programming, and Object Oriented Programming. The computer language that students will learn in these subjects 
+            are Python, C, Java.
+        </p>
+    </div>
+
+    <!--How is Software Engineering differ from Multimedia and Network branch?-->
+    <div class="transition" id="different_branch">
+        <h1>How Software Engineering differ from Multimedia and Game Development and Network and System Technology branch?</h1>
+        <p>
+            For Multimedia and Game Development, students in this branch will learn about front-end development and the use of creativity.
+            But for Software Engineering, we are focusing on back-end developing and deep programming.
+            Network and System Technology will focus on network.
         </p>
     </div>
 
