--- a/SE_Project/SE_Poject.html
+++ b/SE_Project/SE_Poject.html
@@ -224,6 +224,12 @@
                 6016327<br>
                 Cloud-based Enterprise Application Development
             </td>
+            <td>
+                Cooperative Work
+            </td>
+            <td>
+                Cooperative Work
+            </td>
         </tr>
         <tr align="center">
             <td>
