--- a/SE_Project/SE_Poject.html
+++ b/SE_Project/SE_Poject.html
@@ -413,7 +413,10 @@
 
     <!--End of the line-->
     <div id="end_line">
-        <h1>Finish!</h1>
+        <p>Pat Chearapong 60070171<br>
+            Pathompong Subtechitmanee 60070172<br>
+            Theerut Sirichai  60070179<br>
+        </p>
     </div>
 
     <!--JavaScript-->
